[gd_scene load_steps=4 format=3 uid="uid://c10g216owkdbo"]

[ext_resource type="Script" uid="uid://dbnitiynulgm5" path="res://Scripts/movie_info_display.gd" id="1_vxpjn"]
[ext_resource type="Texture2D" uid="uid://bi44htm5bdk2e" path="res://Assets/Posters/eraserhead.jpg" id="2_d2nuk"]

[sub_resource type="LabelSettings" id="LabelSettings_d2nuk"]
font_size = 35

[node name="MovieInfoDisplay" type="CanvasLayer"]
script = ExtResource("1_vxpjn")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_direction = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
texture = ExtResource("2_d2nuk")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelTitle" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Eraser Head"
label_settings = SubResource("LabelSettings_d2nuk")
horizontal_alignment = 1

[node name="RichTextLabelSynopsis" type="RichTextLabel" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et lorem vel urna vehicula placerat. Quisque eget mauris facilisis, vehicula tellus et, sagittis neque. Donec lobortis consequat fringilla. Praesent consectetur tincidunt lacus, semper tempor eros aliquam tempus. Integer nibh mi, ultrices vitae enim vitae, laoreet fringilla leo. Cras aliquam eu ligula vitae tristique. Nulla facilisi. Integer vitae lacus finibus, cursus tortor a, rhoncus justo. Cras lectus lacus, pellentesque ac convallis molestie, mollis a quam. Integer at suscipit nibh, vitae vulputate purus. Aenean finibus hendrerit lacus sit amet tristique. "
fit_content = true
scroll_active = false

[node name="Container3" type="Container" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LabelCast" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Elenco: Blá Blá da Silva"
autowrap_mode = 2

[node name="Container5" type="Container" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Container6" type="Container" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Container7" type="Container" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Container8" type="Container" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Container4" type="Container" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Container" type="Container" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Pressione Esc para sair"
horizontal_alignment = 1

[node name="Container2" type="Container" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
